<resources>
    <string name="app_name">Garden_App</string>
    <string name="page_title">Smart Garden</string>
    <string name="alarm">Alarm</string>
    <string name="light_system">Light System</string>
    <string name="led_1">LED 1</string>
    <string name="on_off">ON/OFF</string>
    <string name="led_2">LED 2</string>
    <string name="led_3">LED 3</string>
    <string name="led_4">LED 4</string>
    <string name="manual_mode">Manual mode</string>
    <string name="set_manual_mode">Set Manual Mode</string>
    <string name="irrigation_system">Irrigation System</string>
    <string name="bluetooth">Connecting Bluetooth</string>
    <string name="auto_mode">Auto mode</string>
</resources>