<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/topbar" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_anchor="@+id/scrollView2"
        app:layout_anchorGravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/simpleTextViewLight"
                android:layout_width="140dp"
                android:layout_height="33dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/light_system"
                android:textSize="20dp"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="387dp"
                android:layout_height="2dp"
                android:layout_marginTop="44dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="393dp"
                android:layout_height="1dp"
                android:layout_marginTop="56dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="258dp" />

            <TextView
                android:id="@+id/led1"
                android:layout_width="37dp"
                android:layout_height="21dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="16dp"
                android:text="@string/led_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <Button
                android:id="@+id/led1OnOff"
                android:layout_width="93dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/blue"
                android:text="@string/on_off"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/led1" />

            <TextView
                android:id="@+id/led2"
                android:layout_width="37dp"
                android:layout_height="21dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="12dp"
                android:text="@string/led_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/led1OnOff" />

            <Button
                android:id="@+id/led2OnOff"
                android:layout_width="93dp"
                android:layout_height="48dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/blue"
                android:text="@string/on_off"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/led2" />

            <TextView
                android:id="@+id/led3"
                android:layout_width="37dp"
                android:layout_height="21dp"
                android:layout_marginStart="212dp"
                android:layout_marginTop="16dp"
                android:text="@string/led_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <ImageButton
                android:id="@+id/led3plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:backgroundTint="@color/blue"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.586"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:srcCompat="@drawable/ic_baseline_add_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/led3Info"
                android:layout_width="47dp"
                android:layout_height="41dp"
                android:layout_marginTop="92dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.582"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <ImageButton
                android:id="@+id/led3minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="136dp"
                android:backgroundTint="@color/blue"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.584"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:srcCompat="@drawable/ic_baseline_remove_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/led4"
                android:layout_width="37dp"
                android:layout_height="21dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="60dp"
                android:text="@string/led_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <ImageButton
                android:id="@+id/led4plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:backgroundTint="@color/blue"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.856"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:srcCompat="@drawable/ic_baseline_add_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/led4Info"
                android:layout_width="47dp"
                android:layout_height="41dp"
                android:layout_marginTop="92dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.854"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <ImageButton
                android:id="@+id/led4minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="136dp"
                android:backgroundTint="@color/blue"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.856"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:srcCompat="@drawable/ic_baseline_remove_24"
                tools:ignore="SpeakableTextPresentCheck" />


            <TextView
                android:id="@+id/simpleTextViewIrrigation"
                android:layout_width="211dp"
                android:layout_height="32dp"
                android:layout_marginTop="16dp"
                android:text="Irrigation System"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.078"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <Button
                android:id="@+id/irrigationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="56dp"
                android:backgroundTint="@color/blue"
                android:text="Open/Close"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />


            <ImageButton
                android:id="@+id/irrigationPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:backgroundTint="@color/blue"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.835"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                app:srcCompat="@drawable/ic_baseline_add_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/irrigationMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:backgroundTint="@color/blue"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.58"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                app:srcCompat="@drawable/ic_baseline_remove_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/irrigationInfo"
                android:layout_width="47dp"
                android:layout_height="41dp"
                android:layout_marginTop="56dp"
                android:text=""
                android:textAlignment="center"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.71"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>